--- a/style.css
+++ b/style.css
@@ -62,6 +62,37 @@
     #company-address, #workhours {
         display: inline-block;
     }
+    .carousel-message::before, .carousel-message::after, .carousel-message span::before, .carousel-message span::after {
+        display: block;
+        content: "";
+        width: 50px;
+        height: 50px;
+        position: absolute;
+    }
+    .carousel-message::before {
+        top: -2px;
+        left: -2px;
+        border-top: 4px solid #37C989;
+        border-left: 4px solid #37C989;
+    }
+    .carousel-message::after {
+        top: -2px;
+        right: -2px;
+        border-top: 4px solid #37C989;
+        border-right: 4px solid #37C989;
+    }
+    .carousel-message span::before {
+        bottom: -2px;
+        left: -2px;
+        border-bottom: 4px solid #37C989;
+        border-left: 4px solid #37C989;
+    }
+    .carousel-message span::after {
+        bottom: -2px;
+        right: -2px;
+        border-bottom: 4px solid #37C989;
+        border-right: 4px solid #37C989;
+    }
 }
 
 .navbar {
@@ -152,7 +183,7 @@
     width: auto;
     background-position: center center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     background-size: cover;
 }
 
@@ -178,6 +209,8 @@
     position: absolute;
     top: 50%;
     left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     color: white;
     text-align: center;
@@ -186,51 +219,15 @@
     border-radius: red;
 }
 
-.carousel-message::before, .carousel-message::after, .carousel-message span::before, .carousel-message span::after {
-    display: block;
-    content: "";
-    width: 50px;
-    height: 50px;
-    position: absolute;
-}
-
-.carousel-message::before {
-    top: -2px;
-    left: -2px;
-    border-top: 4px solid #37C989;
-    border-left: 4px solid #37C989;
-}
-
-.carousel-message::after {
-    top: -2px;
-    right: -2px;
-    border-top: 4px solid #37C989;
-    border-right: 4px solid #37C989;
-}
-
-.carousel-message span::before {
-    bottom: -2px;
-    left: -2px;
-    border-bottom: 4px solid #37C989;
-    border-left: 4px solid #37C989;
-}
-
-.carousel-message span::after {
-    bottom: -2px;
-    right: -2px;
-    border-bottom: 4px solid #37C989;
-    border-right: 4px solid #37C989;
-}
-
 .slide-title {
     font-family: 'Open Sans', sans-serif;
-    font-size: 40px;
+    font-size: 2vw;
     margin-bottom: 0;
     text-transform: uppercase;
 }
 
 .slide-title-two {
-    font-size: 20px;
+    font-size: 1vw;
 }
 
 .carousel-message button {
@@ -239,9 +236,11 @@
     width: 300px;
     padding: 10px;
     border: none;
-    font-size: 20px;
+    font-size: 1vw;
     position: absolute;
     top: 100%;
     left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
