--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
 @media only screen and (min-width: 320px) {
     /* phones */
-    .site-info {
-        font-size: 6px;
-    }
     #company-address, #workhours {
         display: none;
     }
@@ -13,11 +10,9 @@
 }
 
 @media only screen and (min-width: 480px) {
-    .navbar {
-        font-size: 8px;
-    }
+
     .navbar-brand img {
-        height: 1.5em;
+        /* height: 1.5em; */
     }
     #user-button {
         margin-left: 0;
@@ -25,9 +20,7 @@
     .carousel-inner>.item>img {
         height: 300px;
     }
-    .site-info {
-        font-size: 7px;
-    }
+
     #company-address, #workhours {
         display: inline-block;
     }
@@ -39,11 +32,9 @@
 
 @media only screen and (min-width: 768px) {
     /* phones */
-    .site-info {
-        font-size: 12px;
-    }
-    #workhours {
-        display: none;
+
+    #company-address, #workhours {
+        display: inline-block;
     }
     
     .carousel-message button {
@@ -53,17 +44,15 @@
 
 @media only screen and (min-width: 1024px) {
     .navbar {
-        font-size: 20px;
+        /* font-size: 20px; */
     }
     .navbar-brand img {
-        height: 2em;
+        /* height: 2em; */
     }
     #user-button {
         margin-left: 60px;
     }
-    .site-info {
-        font-size: 15px;
-    }
+
     .navbar-total {
         padding-top: 20px;
         padding-bottom: 20px;
@@ -113,7 +102,9 @@
 
 .navbar {
     margin-bottom: 0;
+    font-size: 1.5vw;
 }
+
 
 .site-info {
     background-color: #3A3C3E;
@@ -121,6 +112,7 @@
     /* width: auto; */
     padding-top: 10px;
     padding-left: 15px;
+    font-size: 1vw;
 }
 
 .icon-flipped {
@@ -148,7 +140,7 @@
 .navbar-brand {
     height: auto;
     width: 200px;
-    font-size: 24px;
+    font-size: 1.2vw;
 }
 
 .navbar-brand img {
@@ -249,8 +241,8 @@
 .carousel-message button {
     text-transform: uppercase;
     background-color: #37C989;
-    width: 300px;
-    max-width: 100%;
+    width: 20vw;
+    /* max-width: 100%; */
     padding: 10px;
     border: none;
     font-size: 1vw;
