--- a/style.css
+++ b/style.css
@@ -3,14 +3,15 @@
     #company-address, #workhours {
         display: none;
     }
-
     .carousel-message button {
         top: 70%;
+    }
+    .owl-carousel.owl-theme .item {
+        padding: 30%;
     }
 }
 
 @media only screen and (min-width: 480px) {
-
     .navbar-brand img {
         /* height: 1.5em; */
     }
@@ -20,25 +21,27 @@
     .carousel-inner>.item>img {
         height: 300px;
     }
-
     #company-address, #workhours {
         display: inline-block;
     }
-    
     .carousel-message button {
         top: 80%;
+    }
+    .owl-carousel.owl-theme .item {
+        padding: 25%;
     }
 }
 
 @media only screen and (min-width: 768px) {
     /* phones */
-
     #company-address, #workhours {
         display: inline-block;
     }
-    
     .carousel-message button {
         top: 90%;
+    }
+    .owl-carousel.owl-theme .item {
+        padding: 20%;
     }
 }
 
@@ -52,7 +55,6 @@
     #user-button {
         margin-left: 60px;
     }
-
     .navbar-total {
         padding-top: 20px;
         padding-bottom: 20px;
@@ -62,6 +64,9 @@
     }
     #company-address, #workhours {
         display: inline-block;
+    }
+    .owl-carousel.owl-theme .item {
+        padding: 15%;
     }
     .carousel-message::before, .carousel-message::after, .carousel-message span::before, .carousel-message span::after {
         display: block;
@@ -94,7 +99,6 @@
         border-bottom: 4px solid #37C989;
         border-right: 4px solid #37C989;
     }
-
     .carousel-message button {
         top: 100%;
     }
@@ -104,7 +108,6 @@
     margin-bottom: 0;
     font-size: 1.5vw;
 }
-
 
 .site-info {
     background-color: #3A3C3E;
@@ -187,7 +190,6 @@
 
 .owl-carousel.owl-theme .item {
     position: relative;
-    padding: 15%;
     width: auto;
     background-position: center center;
     background-repeat: no-repeat;
@@ -198,7 +200,6 @@
 .item.fly-one {
     /* position: relative; */
     /* height: 500px; */
-    height: 100%;
     background-image: url("./images/flyone.jpg");
     /* background-repeat: no-repeat; */
     /* background-size: cover; */
@@ -243,7 +244,7 @@
     background-color: #37C989;
     width: 20vw;
     /* max-width: 100%; */
-    padding: 10px;
+    padding: 0.8em;
     border: none;
     font-size: 1vw;
     position: absolute;
